# d_global

./: .gitignore  CMakeLists.txt
include/: commom.h  d_global.h
include/API_C/: interfacec.h
include/API_CPP/: interfacecpp.h
src/: d_global.cpp
src/API_C/: interfacec.c
src/API_CPP/: interfacecpp.cpp
